--- a/styles/style.css
+++ b/styles/style.css
@@ -313,6 +313,7 @@ nav ul:last-child img {
 
 .catalog-content ul li:not(:first-child) {
     max-width: 400px;
+    transition: all .3s;
 }
 
 .catalog-content ul li span {
@@ -344,7 +345,8 @@ nav ul:last-child img {
 /*========================= PRODUCTS  ================================== */
 
 .products {
-    /* padding: 200px 0; */
+    padding-bottom: 200px;
+    position: relative;
 }
 
 .products h3 {
@@ -370,22 +372,41 @@ nav ul:last-child img {
 }
 
 .product-item {
-    max-width: 400px;
+    max-width: 300px;
+    height: 100%;
 }
 
-.products-list {
+.product-item:hover .product-image {
+    background-color: #383838;
+}
+
+#products-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    row-gap: 55px;
+    place-items: center;
+    margin-bottom: 100px;
+}
+
+.product-image {
+    position: relative;
+    background-color: rgb(209, 209, 209);
+    width: 300px;
+    height: 450px;
+    transition: all .3s;
 }
 
 .product-image img {
-    max-width: 400px;
-    max-height: 500px;
-    margin-bottom: 20px;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .product-info {
     text-align: center;
+    margin-top: 20px;
 }
 
 
@@ -394,3 +415,50 @@ nav ul:last-child img {
     font-size: 14px;
     margin-top: 20px;
 }
+
+[data-status="hot"]::before {
+    position: absolute;
+    content: "HOT";
+    top: 40px;
+    left: 1px;
+    width: 60px;
+    height: 30px;
+    background-color: rgb(255, 72, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+[data-status="sale"]::before {
+    position: absolute;
+    content: "SALE";
+    top: 40px;
+    left: 1px;
+    width: 60px;
+    height: 30px;
+    background-color: rgb(31, 144, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+}
+
+.products-btn {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px 30px;
+    background-color: #000;
+    color: #fff;
+    text-transform: uppercase;
+    border-radius: 3px;
+    transition: all .3s;
+}
+
+.products-btn:hover {
+    background-color: #fff;
+    color: #000;
+    border: solid 1px #000;
+}
+
